# makegis

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: makegis.load.yml  makegis.node.yml  makegis.project1.yml  makegis.project2.yml  makegis.root1.yml  makegis.root2.yml  makegis.transform.yml  makegis.yml  multiple_groups.makegis.yml  single_group.makegis.yml
src/makegis/: cli.py  config.py  dag.py  errors.py  journal.py  log.py  postgis.py  utils.py
src/makegis/config/: __init__.py  makegis.py  project.py  root.py  utils.py
src/makegis/core/: commands.py  load.py  transforms.py
src/makegis/dag/: builder.py  dag.py  sql.py
src/makegis/targets/: postgis.py  target.py
tests/: project_prepper.py  test_config_context.py  test_config_examples.py  test_config_project.py  test_config_variable_expansion.py  test_dag_build_from_project.py  test_dag_generation.py  test_dag_selection.py  test_makegis_examples.py  test_makegis_root_examples.py  test_sql_parsing.py
