[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makegis"
version = "0.1.0"
description = "Build spatial databases"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Christophe Thiange"}]

dependencies = ["duckdb", "psycopg[binary]", "pydantic", "python-dotenv", "pyyaml", "sqlglot"]

[project.scripts]
mkgs = "makegis.cli:cli"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
