[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makegis"
description = "A lightweight orchestrator for spatial databases"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Christophe Thiange" }]
dependencies = [
	"duckdb",
	"psycopg[binary]",
	"pydantic",
	"python-dotenv",
	"pyyaml",
	"rich",
	"sqlglot",
]
dynamic = ["version"]

[project.scripts]
mkgs = "makegis.cli:cli"

[project.urls]
Repository = "https://github.com/cthiange/makegis"

[tool.hatch.version]
path = "src/makegis/__init__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
